--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -1,5 +1,7 @@
-{
+*{
   box-sizing: border-box;
-  margin:0;
-  padding
+  margin: 0;
+  padding: 0;
+  font-family: "Outfit", Arial, Helvetica, sans-serif;
+
 }
